@@ -26,6 +26,8 @@
   (MySQL bug #59438, Oracle bug #11770465)
 - fixed MySqlConnectionStringBuilder.ContainsKey to return true for any alternative versions
   of a keyword (MySQL bug #59835, Oracle bug #11766671)
+- fixed calculation of precision and scale for decimal columns
+  (MySQL bug #59989, Oracle bug #11776346)
 
 Version 6.0.7
 - Fix authorization popup after modifying stored procedure in VS (Bug #44715)
